# hardware

./: README.md
3d_printer/Layla_Model_1_8/: Charger_Print.STL  Charger_Print.sldprt  Layla_Bottom_Print.STL  Layla_Top_Print.STL  Wheel_Front_Print.STL  Wheel_Front_Print.sldprt
Robo_arm/: arm_body.scad  arm_dimensions.txt  gear.scad  micro_servo_gear.scad  mid_arm.scad  robo_arm.scad  robo_finger.scad  robo_hand_gear_box.scad  servo_6_star.scad
Robo_arm/STL_files/: Top_of_wrist_box.stl  bottom_arm_attach_piece.stl  mid_arm.stl  robo_arm_bottom_1.stl  robo_arm_bottom_2.stl  robo_finger_mark4.stl  robo_hand_gear_box_BOTTOM3.stl  robo_hand_gear_box_TOP4.stl  robo_wrist_cage_side.stl  servo_6_star.stl  wrist_box.stl
layla/BMS/: RobotMoose_BMS_Operation.docx  RobotMoose_BMS_Operation.xlsx
layla/SolidWorks/: 11in_barbie_mower.SLDPRT  Axle_7_16.SLDPRT  Camera_Bracket.SLDPRT  Caster Part.SLDPRT  Conduit_Back.SLDPRT  Conduit_Front.SLDPRT  Counterweight_Ingot.SLDPRT  Genius_Webcam.SLDPRT  Hair Pin Cotter Pin.SLDPRT  Laptop.SLDPRT  Layla.SLDASM  Layla_Bottom.SLDPRT  Layla_Bottom_Full.SLDPRT  Layla_Top_Full.SLDPRT  Part2.ipt  SCREW_8-FH(0.500'').SLDPRT  SCREW_8-FH(0.750'').SLDPRT  Volcano_Left_7.SLDPRT  Volcano_Right_7.SLDPRT  (+2 more)
pvc/: pvc_0.75in_id_pipe.stl  pvc_adapter.scad  pvc_tele_15.2.stl  pvc_tele_19.2.stl
sensors/sound_localize/software/kinect_localize/: CMakeLists.txt  Sound_Localize_Kinect.cpp
sensors/sound_localize/software/kinect_localize/include/: Kinect_DOA.h  xcor_td.h
sensors/sound_localize/software/kinect_localize/src/: Kinect_DOA.cpp  xcor_td.cpp
(+176 files in other folders)
